style.css
@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500&family=Fira+Sans:wght@300;400;500&display=swap');

body {
  font-family: "Fira Sans", sans-serif;
  margin: 0 0 100px 0;
  -moz-text-size-adjust: none;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
}

h2 { font-weight: 500; }

p { font-weight: 300; }

a {
  font-weight: 400;
  text-decoration: none;
}

.monospace {
  font-family: "Fira Code", monospace;
  font-weight: 300;
}

.align-left {
  max-width: 70%;
  padding-top: 30px;
  margin: auto;
}

.align-center {
  max-width: 60%;
  padding-top: 30px;
  text-align: center;
  margin: auto;
}

.header {
  padding: 20px;
  text-align: center;
}

.title {
  font-size: 48px;
  font-weight: 450;
}

.subtitle {
  font-size: 24px;
  font-weight: 300;
}

pre {
  max-width: 600px;
  margin: 0px;
  padding: 20px;
  border-radius: 6px;
  overflow-x: auto;
}

code {
  font-family: "Fira Code", monospace;
  font-weight: 500;
  font-size: 14px;
}

.input {
  border-radius: 4px;
  cursor: text;
  padding: 3px 6px;
  font-family: "Fira Sans", sans-serif;
  font-size: 13px;
}

.button {
  border-radius: 4px;
  cursor: pointer;
  padding: 3px 10px;
  font-family: "Fira Sans", sans-serif;
  font-size: 13px;
  transition-duration: 0.36s;
}

@media (prefers-color-scheme: light) {
  body {
    background: #e2e9f1;
    color: #000000;
  }

  a:link    { color: #1579cb; }
  a:hover   { color: #3595e3; }
  a:visited { color: #7e32da; }
  a:active  { color: #3b42ca; }

  .header {
    background: #3d7ebb;
    color: #ffffff;  
  }

  pre {
    background-color: #c3cedb;
  }

  code {
    color: #5c6166;
  }

  .h-comment  { color: #787b8099; }
  .h-keyword  { color: #fa8d3e; }
  .h-operator { color: #ed9366; }
  .h-function { color: #f2ae49; }
  .h-number   { color: #a37acc; }
  .h-string   { color: #86b300; }

  .button {
    background-color: #e2e9f1;
    border: 2px solid #83b6f1;
    color: black;
  }

  .input {
    background-color: #e2e9f1;
    border: 2px solid #83b6f1;
    color: black;
  }

  .button:hover {
    background-color: #83b6f1;
  }
}

@media (prefers-color-scheme: dark) { 
  body {
    background: #17202c;
    color: #ffffff;
  }

  a:link    { color: #3f9be6; }
  a:hover   { color: #5fb1f4; }
  a:visited { color: #b377fc; }
  a:active  { color: #757bf3; }

  .header {
    background: #21598d;
    color: #ffffff;  
  }

  pre {
    background-color: #1f2a39;
  }

  code {
    color: #cccac2;
  }

  .h-comment  { color: #b8cfe680; }
  .h-keyword  { color: #ffad66; }
  .h-operator { color: #f29e74; }
  .h-function { color: #ffd173; }
  .h-number   { color: #dfbfff; }
  .h-string   { color: #d5ff80; }

  .button {
    background-color: #17202c;
    border: 2px solid #406c9f;
    color: white;
  }

  .input {
    background-color: #17202c;
    border: 2px solid #406c9f;
    color: white;
  }

  .button:hover {
    background-color: #406c9f;
  }
}

